--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -269,6 +269,16 @@
     font-size: 23px;
     color: #fff;
     position: relative;
+    left: -64px;
+}
+
+.menu_one::before {
+    left: -20px;
+    content: "Развернуть";
+    font-size: 12px;
+    color: #fff;
+    position: relative;
+    top: 30px;
 }
 
 .menu_one.active::after {
