--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -13,6 +13,7 @@
     --colorFontContent: #2A3B4F;
     --colorEducator: #229FA4;
     --colorDanger: #D41B19;
+    --colorWhiteText: #FFFFFF;
 }
 
 /*---------Скролл-----------*/
@@ -1830,6 +1831,213 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
     color: var(--colorBlockCardOne);
 }
 
+
+/*---------------------------------------*/
+
+.card-lk_title-paket>div,
+.card-lk_title-zakaz {
+    color: var(--colorWhiteText);
+    font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+}
+
+.card-lk_title-paket>div,
+.card-lk_title-zakaz {
+    font-size: 28px;
+    line-height: 32px;
+}
+
+.card-lk_title-paket>div>span,
+.card-lk_title-zakaz>span {
+    font-size: 36px;
+    color: inherit;
+    font-family: inherit;
+    padding-left: 10px;
+}
+
+.card-lk_title-paket {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: space-between;
+    column-gap: 20px;
+}
+
+.card-lk_title-paket>div:nth-child(2) {
+    font-size: 20px;
+}
+
+.history-paket-item {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.card-lk_buy.history-paket-buy {
+    padding: 25px 30px 20px 30px;
+}
+
+.using-classes {
+    padding: 10px 30px;
+    background: var(--colorBlockCardOne);
+    display: block;
+    position: relative;
+}
+
+.using-classes>li {
+    height: 25px !important;
+}
+
+.using-classes>li>a,
+.using-classes>li>a[aria-expanded="true"],
+.using-classes>li>a:hover {
+    color: var(--colorWhiteText);
+    font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.using-classes>li.using-classes_li>div.using-class {
+    height: 0;
+    opacity: 0;
+    display: none;
+}
+
+.using-classes>li.using-classes_li.uk-open>div.using-class {
+    display: block !important;
+    position: absolute;
+    z-index: 1001;
+    width: 100%;
+    left: -1px;
+    top: 40px;
+    border: 2px solid var(--colorBlockCardOne);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 5px 10px 2px rgb(0 0 0 / 25%);
+    box-shadow: 0px 5px 10px 2px rgb(0 0 0 / 25%);
+    padding: 15px;
+    background: var(--colorWhiteText);
+    height: fit-content;
+    transition: all 0.5s;
+    opacity: 1;
+    margin: 0 !important;
+}
+
+
+.using-classes>li.using-classes_li>div.using-class>ul>li.using-class-item>div>div {
+    transition: all 1s;
+}
+
+.using-classes>li.using-classes_li.uk-open>div.using-class>ul>li.using-class-item>div>div {
+    font-size: 16px;
+}
+
+.using-class>ul {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.using-class-item>div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.using-classes>li>a::before {
+    content: "";
+    display: block;
+    position: relative;
+    width: 0;
+    height: 0;
+    margin-left: 0;
+    border: 10px solid transparent;
+    border-top: 10px solid;
+    top: 10px;
+    left: 0;
+    float: right;
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.using-classes>li>a[aria-expanded="true"]::before {
+    border: 10px solid transparent;
+    border-bottom: 10px solid;
+    top: 0px;
+    left: 0;
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+}
+
+.using-class-item.using-class-plus>div:nth-child(2) {
+    display: flex;
+}
+
+.using-class-item.using-class-minus>div:nth-child(2) {
+    display: none;
+}
+
+.using-class-item>div:nth-child(1),
+.using-class-item>div:nth-child(2) {
+    font-family: 'Nunito-Bold';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+}
+
+.using-class-item {
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+.using-class-item.using-class-minus {
+    background: #82c9c033;
+
+}
+
+.using-class-item.using-class-minus>div>div {
+    color: var(--colorEducator);
+}
+
+.using-class-item.using-class-plus {
+    background: #d41b191a;
+}
+
+.using-class-item.using-class-plus>div>div {
+    color: var(--colorDanger);
+}
+
+.color-order-history-card.used {
+    border: 3px solid var(--colorBlockCardFive);
+}
+
+.color-order-history-card.used>.history-paket-item {
+    background: var(--colorBlockCardFive);
+}
+
+.color-order-history-card.used>.using-classes {
+    background: var(--colorBlockCardFive);
+}
+
+.color-order-history-card.used>.using-classes>li.using-classes_li.uk-open>div.using-class {
+    border: 2px solid var(--colorBlockCardFive);
+}
+
+.color-order-history-card.used>.using-classes>li.using-classes_li.uk-open>div.using-class>ul>li>.using-class-item.using-class-plus {
+    background: #d41b191a;
+}
+
+.color-order-history-card.used>.using-classes>li.using-classes_li.uk-open>div.using-class>ul>li>.using-class-item.using-class-plus>div>div {
+    color: var(--colorDanger);
+}
+
+/*-----------------------------------------*/
+
 /*-------Адаптив------------------*/
 
 @media (max-width: 1100px) {
@@ -2362,6 +2570,25 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
         min-width: 80px;
         margin: -10px 15px 0px 0px;
     }
+
+    .card-lk_title-paket>div,
+    .card-lk_title-zakaz {
+        font-size: 24px;
+        line-height: 28px;
+    }
+
+    .card-lk_title-paket>div>span,
+    .card-lk_title-zakaz>span {
+        font-size: 26px;
+    }
+
+    .history-paket-item {
+        gap: 5px;
+    }
+
+    .card-lk_title-paket>div:nth-child(2) {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 500px) {
@@ -2561,5 +2788,47 @@ table.operation-history>tbody .write-off td:nth-of-type(5) {
 
     #offcanvas-mobile-menu {
         height: fit-content;
+    }
+
+
+}
+
+@media (max-width: 400px) {
+
+    .using-classes>li>a,
+    .using-classes>li>a[aria-expanded="true"],
+    .using-classes>li>a:hover {
+        font-size: 15px;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: flex-end;
+        line-height: 15px;
+        width: 100%;
+    }
+
+    .using-classes>li {
+        height: 40px !important;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .using-classes>li.using-classes_li.uk-open>div.using-class {
+        left: 0px;
+        top: 60px;
+    }
+
+    .using-classes>li {
+        height: 60px !important;
+    }
+
+    .using-classes>li>a[aria-expanded="true"]::before {
+        top: -10px;
+        left: 0;
+    }
+
+    .using-classes>li>a::before {
+        top: 10px;
     }
 }
